--- a/client/layout.html
+++ b/client/layout.html
@@ -1,5 +1,7 @@
 <head>
     <script src="https://download.affectiva.com/js/3.1/affdex.js"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
+
 </head>
 
 <template name="mainLayout">
